# FeedbackReportGenerator

./: .gitignore  Dockerfile  README.md  ToDo  docker-compose.yml  pyproject.toml  student.json
report_generator/apis/: urls.py  views.py
report_generator/apis/templates/: index.html  report.html  upload.html
report_generator/report_generator/: asgi.py  settings.py  urls.py  wsgi.py
report_generator/reports/: models.py  utils.py
report_generator/reports/migrations/: 0001_initial.py
report_generator/tasks/: __init__.py  celery.py  report_tasks.py
